# opcua-tui

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/: CODEOWNERS
docs/: ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  HIGH_LEVEL_DESIGN.md  IMPLEMENTATION_PLAN.md  README.md  ROADMAP.md
specs/: browser-loading-spinner.md  connect-modal-file-picker.md  logging-and-diagnostics.md  node-subscriptions.md  secure-connections.md
src/opcua_tui/: main.py
src/opcua_tui/app/: bootstrap.py  effects.py  messages.py  reducer.py  store.py
src/opcua_tui/application/ports/: opcua_client.py
src/opcua_tui/domain/: endpoint.py  enums.py  models.py
src/opcua_tui/infrastructure/: logging_config.py
src/opcua_tui/infrastructure/opcua/: pki.py  stub_client.py
src/opcua_tui/ui/: textual_app.py  theme.py
src/opcua_tui/ui/screens/: browser_screen.py  connect_modal_screen.py  log_viewer_screen.py  path_picker_screen.py
src/opcua_tui/ui/widgets/: address_tree.py  node_details.py  status_bar.py  subscription_panel.py  watchlist_panel.py  write_value_panel.py
tests/: test_smoke.py
tests/unit/: test_main.py
tests/unit/app/: test_bootstrap.py  test_effects.py  test_messages.py  test_reducer.py  test_store.py
tests/unit/application/: test_opcua_client_port.py
tests/unit/domain/: test_endpoint.py  test_enums.py  test_models.py
tests/unit/infrastructure/: test_logging_config.py  test_pki.py  test_stub_client.py
tests/unit/ui/: test_textual_app.py
tests/unit/ui/screens/: test_browser_screen.py  (+3 more)
(+6 files in other folders)
