[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opcua-tui-starter"
version = "0.1.0"
description = "Starter Textual OPC UA TUI with MVU-style architecture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "asyncua>=1.1,<2.0",
  "textual>=0.58,<1.0"
]

[project.optional-dependencies]
dev = [
  "pre-commit>=3.8",
  "pytest>=8.0",
  "ruff>=0.11.0",
]

[project.scripts]
opcua-tui = "opcua_tui.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
